Fix button spacing issue

--- a/src/public/stylesheets/broadcastinfo.css
+++ b/src/public/stylesheets/broadcastinfo.css
@@ -20,9 +20,10 @@ a.button {
     border: 1px solid #aaa;
     border-radius: 0.3em;
     display: block;
-    width: 9.5em;
+    width: 10em;
     margin: 1em auto;
     color: #DDD;
+    text-align: center;
 }
 
 @media only screen and (max-device-width: 532px) {
